fixing jump between 1 letter number to 2

--- a/src/components/Pager/PortalPager.css
+++ b/src/components/Pager/PortalPager.css
@@ -16,3 +16,7 @@
 .c-pager-left-op{
     opacity: 0.3;
 }
+.c-pager>span{
+    text-align: center;
+    width: 18.5px;
+}
